--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bytarch/qrcode": "^1.0.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -36,7 +37,6 @@
     "lucide-react": "^0.435.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
-    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
